side nav  commit

--- a/arrow.html
+++ b/arrow.html
@@ -20,7 +20,7 @@
         </script>
      </div>   
 
-    <div class="project-hero-container hidden" id="intro">
+    <div class="project-hero-container hidden">
         <div class="project-hero">
             <div class="ph-content">
                 <h2 class="h10">
@@ -33,25 +33,9 @@
             <img src="./Website Images/Pristine Cline/Hero Dashboard Mockup.png" alt="Pristine Clean Website dashboard">
         </div>
     </div>
-
-    <div class="side-nav">
-        <a href="#overview">Overview</a>
-        <a href="#problem-statement-pc">Problem Statement</a>
-        <a href="#goals-pc">Goals</a>
-        <a href="#solutions-pc">The Solutions</a>
-        <a href="#research">Research</a>
-        <a href="#design-process">Design Process</a>
-        <a href="#final-design">Final Designs</a>
-        <a href="#future-steps">Future Steps</a>
-        <a href="#reflection">Reflection</a>
-        <a href="#projects">Other Projects</a>
-        <a href="#intro">Back to Top</a>
-    </div>
-
-
     <main class="hidden">
 
-        <div class="main-section project-section" id="overview">
+        <div class="main-section project-section">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -155,7 +139,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="goals-pc">
+        <div class="main-section project-section" id="goals">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -206,7 +190,7 @@
             </div>
         </div>
 
-        <div class="main-section project-section" id="solutions-pc">
+        <div class="main-section project-section" id="solutions">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
