--- a/flyers.html
+++ b/flyers.html
@@ -21,10 +21,10 @@
      </div>   
 
     <div class="project-hero-container hidden">
-        <div class="project-hero" id="intro">
+        <div class="project-hero">
             <div class="ph-content">
                 <h2 class="h10">
-                    Brand Identity and Guidelines
+                    Branding Identity
                 </h2>
                 <h1 class="h9">
                     The katsbrune bookstore & cafe
@@ -33,28 +33,9 @@
             <img class="round-img" src="./Website Images/Katsbrune/The Katsbrune-Sign Mockup-2 (1).jpg" alt="Pristine Clean Website dashboard">
         </div>
     </div>
-
-    <div class="side-nav">
-        <a href="#overview">Overview</a>
-        <a href="#objective">The Objective</a>
-        <a href="#logo">The Logo</a>
-        <a href="#branding-assets">Branding Assets</a>
-        <a href="#final-design">Brand Guidelines</a>
-        <a href="#projects">Other Projects</a>
-        <a href="#intro">Back to Top</a>
-    </div>
-
-
-
-
-
-
-
-
-
     <main class="hidden">
 
-        <div class="main-section project-section" id="overview">
+        <div class="main-section project-section">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -94,7 +75,7 @@
             <hr class="thin-line">
         </div>
 
-        <div class="main-section project-section" id="objective">
+        <div class="main-section project-section">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -114,7 +95,7 @@
         </div>
 
 
-        <div class="sub-section project-section" id="logo" id="pad50" >
+        <div class="sub-section project-section" id="pad50">
             <h6>
                 The Katsbrune Logo
             </h6>
@@ -128,7 +109,7 @@
         </div>
 
         
-        <div class="sub-section project-section" id="branding-assets"  id="pad50">
+        <div class="sub-section project-section" id="pad50">
             <h6>
                 The Katsbrune Branding Assets
             </h6>
@@ -147,11 +128,11 @@
         </div>
 
         
-        <div class="main-section project-section" id="final-design">
+        <div class="main-section project-section">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
-                    Brand Guidelines
+                    Branding identity
                 </h2>
             </div>
             <h6>
