--- a/index.html
+++ b/index.html
@@ -149,24 +149,25 @@
 
 
         <div class="other-projects section-padding hidden">
+            <a href="./ignite.html" class="link-wrapper"> 
                 <div class="project-card-2" id="Ignite">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                Ignite lacrosse club
-                            </h3>
-                            <p class="p3">
-                                Brand Identity
-                            </p>
+                        <div class="pc1-main-content">
+                            <div class="pc1-content">
+                                <h3>
+                                    Ignite lacrosse club
+                                </h3>
+                                <p class="p3">
+                                    Brand Identity
+                                </p>
+                            </div>
+                            <div class="pc1-button">
+                                    <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </div>
                         </div>
-                        <div class="pc1-button">
-                            <a href="#">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                            </a>
-                        </div>
+                        <img src="Website Images/Ignite Lacrosse Club/Ignite Apparel.png" alt="Ignite Apparel Mockup" class="pc1-img" id="Ignite-mockup">
                     </div>
-                    <img src="Website Images/Ignite Lacrosse Club/Ignite Apparel.png" alt="Ignite Apparel Mockup" class="pc1-img" id="Ignite-mockup">
-                </div>
+                </a> 
+
 
                 <div class="project-card-2" id="alltech-flyers">
                     <div class="pc1-main-content">
