--- a/llp.html
+++ b/llp.html
@@ -20,8 +20,8 @@
         </script>
      </div>   
 
-    <div class="project-hero-container hidden">
-        <div class="project-hero">
+    <div class="project-hero-container hidden" >
+        <div class="project-hero" id="intro">
             <div class="ph-content">
                 <h2 class="h10">
                     INTERNAL APPLICATION
@@ -33,9 +33,26 @@
             <img src="./Website Images/LLP Application/LLP Hero Image.png" alt="LLP app dashborad">
         </div>
     </div>
+
+
+    <div class="side-nav">
+        <a href="#overview">Overview</a>
+        <a href="#problem-statement-LLP">Problem Statement</a>
+        <a href="#goals">Goals</a>
+        <a href="#solutions">The Solutions</a>
+        <a href="#impact">The Results</a>
+        <a href="#research">Research</a>
+        <a href="#design-process">Design Process</a>
+        <a href="#final-design">Final Designs</a>
+        <a href="#future-steps">Future Steps</a>
+        <a href="#projects">Other Projects</a>
+        <a href="#intro">Back to Top</a>
+    </div>
+
+    
     <main class="hidden">
 
-        <div class="main-section project-section">
+        <div class="main-section project-section" id="overview">
             <div class="section-subtitle">
                 <img src="./Website Images/Assets/section orb-v1.svg" alt="section highlight orb">
                 <h2 class="h8">
@@ -471,6 +488,12 @@
                     After launch, we’d like to monitor user feedback through interviews and usability testing to understand the future needs and overall satisfaction of our users.
                 </p>
             </div>
+        </div>
+
+        <div class="project-nav-buttons" id="margin50">
+            <a href="./index.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./index.html"><button class="btn-primary">Home</button></a>
+            <a href="./pristine clean case study.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         <div id="projects">
