other projects commit

--- a/finlandia.html
+++ b/finlandia.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alltech Promotional Flyers</title>
+    <title>NCBA Conference Designs </title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
 
@@ -27,10 +27,10 @@
                     Print and Publication
                 </h2>
                 <h1 class="h9">
-                    Alltech Flyers
+                    Finlandia Infographic
                 </h1>
             </div>
-            <img class="round-img" src="./Website Images/Alltech Flyers Downsized/Egalis Flyer Mockup.jpg" alt="Egalis Flyer Mockup">
+            <img class="round-img" src="./Website Images/Finlandia Infographic/Finlandia Mockup.jpg" alt="Finlandia Infographic Mockup">
         </div>
     </div>
 
@@ -49,39 +49,25 @@
                 </h2>
             </div>
             <h6>
-                Creating Promotional Flyers that Engage Consumers and Increase Sales
+                Designing an Elegant, Informative Infographic for One of Finland’s Prized Vodkas
             </h6>
             <p>
-                These flyers were created for Alltech and its subsidiary brands. Each flyer is meant to advertise a new product and its benefits while keeping consistent branding and directing the consumer to take further action.
+                This infographic was created as a part of a comprehensive campaign for Finlandia Vodka. The goal was to capture some of the most influential information about Finlandia’s brand and display it in a visually consistent yet elegant way that guides the viewer through the infographic. Utilizing Finlnadia’s prized bottle and imagery of Finland which represents the brand's proud heritage, I was able to create a compelling and informative infographic that showcased who the brand is and its story.
             </p>
         </div>
 
 
         <div class="project-image round-img" id="final-designs">
-            <img src="./Website Images/Alltech Flyers Downsized/Crystalyx Winter Ad Flyer Mockup.jpg" alt="Crystalyx Flyer Mockup">
-            <img src="./Website Images/Alltech Flyers Downsized/YC3 Kirby Agri Flyer Mockup.jpg" alt="Kirby Agri Flyer mockup">
-            <div class="alltech-flyer-grid">
-                <img src="./Website Images/Alltech Flyers Downsized/Alltech Egalis Ad-V4-Website.jpg" alt="Egalis Flyer">
-                <img src="./Website Images/Alltech Flyers Downsized/Crystalyx Winter Ad Concept (1).jpg" alt="Crystalyx Flyer">
-                <img src="./Website Images/Alltech Flyers Downsized/YC3 Kirby Agri Flyer-18978.jpg" alt="Kirby Agri Flyer">
-            </div>
+            <img src="./Website Images/Finlandia Infographic/Finlandia Infographic downsized.jpg" alt="Full Size Infographic">
+
         </div>
 
 
 
-
-
-        
-
-
-
-
-
-
         <div class="project-nav-buttons" id="margin50">
-            <a href="./ignite.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./ncba.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./ncba.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./cookbook.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         
