--- a/ignite.html
+++ b/ignite.html
@@ -21,7 +21,7 @@
      </div>   
 
     <div class="project-hero-container hidden">
-        <div class="project-hero">
+        <div class="project-hero" id="intro">
             <div class="ph-content">
                 <h2 class="h10">
                     Brand Identity
@@ -33,6 +33,19 @@
             <img class="round-img" src="./Website Images/Ignite Lacrosse Club/Artboard 1 copy.jpg" alt="Ignite Logo with flame background">
         </div>
     </div>
+
+
+    <div class="side-nav-2">
+        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
+    </div>
+
+
+
+
+
+
+
+
     <main class="hidden">
 
         <div class="main-section project-section">
