--- a/index.html
+++ b/index.html
@@ -115,28 +115,26 @@
                 </div>
             </a>
 
-
-            <div class="project-card-1 hidden" id="arrow">
-                <div class="pc1-main-content">
-                    <div class="pc1-content">
-                        <h3>
-                            Arrow Application
-                        </h3>
-                        <p class="p3">
-                            UI/UX Design
-                        </p>
+            <a href="./arrow.html" class="link-wrapper">
+                <div class="project-card-1 hidden" id="arrow">
+                    <div class="pc1-main-content">
+                        <div class="pc1-content">
+                            <h3>
+                                Arrow Application
+                            </h3>
+                            <p class="p3">
+                                UI/UX Design
+                            </p>
+                        </div>
+                        <div class="pc1-button">
+                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                        </div>
                     </div>
-                    <div class="pc1-button">
-                        <a href="#">
-                            <!-- <p class="p3">View Project</p> -->
-                            <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                        </a>
+                    <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
+
                     </div>
                 </div>
-                <img src="./Website Images/Arrow/Arrow Dashboard Home Screen Mockup.jpg" alt="Arrow Application Dashboard" class="pc1-img">
-
-            </div>
-        </div>
+            </a>
 
         <div class="title-section section-padding hidden">
             <p>
@@ -168,44 +166,45 @@
                     </div>
                 </a> 
 
-
-                <div class="project-card-2" id="alltech-flyers">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                Alltech Flyers
-                            </h3>
-                            <p class="p3">
-                                Print and Publication
-                            </p>
+                <a href="./flyers.html" class="link-wrapper"> 
+                    <div class="project-card-2" id="alltech-flyers">
+                        <div class="pc1-main-content">
+                            <div class="pc1-content">
+                                <h3>
+                                    Alltech Flyers
+                                </h3>
+                                <p class="p3">
+                                    Print and Publication
+                                </p>
+                            </div>
+                            <div class="pc1-button">
+                                    <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </div>
                         </div>
-                        <div class="pc1-button">
-                            <a href="#">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                            </a>
-                        </div>
+                        <img src="./Website Images/Alltech Flyers Downsized/Flyer Grouping.png" alt="Alltech Flyers Stacked" class="pc1-img" id="alltech-flyer-mockup">
                     </div>
-                    <img src="./Website Images/Alltech Flyers Downsized/Flyer Grouping.png" alt="Alltech Flyers Stacked" class="pc1-img" id="alltech-flyer-mockup">
-                </div>
+                </a>
 
-                <div class="project-card-2" id="NCBA">
-                    <div class="pc1-main-content">
-                        <div class="pc1-content">
-                            <h3>
-                                NCBA 2024 Conference
-                            </h3>
-                            <p class="p3">
-                                Promotional Materials
-                            </p>
+
+                <a href="./ncba.html" class="link-wrapper"> 
+
+                    <div class="project-card-2" id="NCBA">
+                        <div class="pc1-main-content">
+                            <div class="pc1-content">
+                                <h3>
+                                    NCBA 2024 Conference
+                                </h3>
+                                <p class="p3">
+                                    Promotional Materials
+                                </p>
+                            </div>
+                            <div class="pc1-button">
+                                    <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
+                            </div>
                         </div>
-                        <div class="pc1-button">
-                            <a href="#">
-                                <img src="./Website Images/Icons/Arrow Icon-light grey.svg" alt="arrow icon">
-                            </a>
-                        </div>
+                        <img src="./Website Images/NCBA 2024/NCBA 2024 Postcard-5x7.jpg" alt="NCBA postcard" class="pc1-img" id="NCBA-postcard">
                     </div>
-                    <img src="./Website Images/NCBA 2024/NCBA 2024 Postcard-5x7.jpg" alt="NCBA postcard" class="pc1-img" id="NCBA-postcard">
-                </div>
+                </a>
 
                 <div class="project-card-2" id="Finlandia">
                     <div class="pc1-main-content">
