--- a/katsbrune.html
+++ b/katsbrune.html
@@ -40,8 +40,12 @@
         <a href="#logo">The Logo</a>
         <a href="#branding-assets">Branding Assets</a>
         <a href="#final-design">Brand Guidelines</a>
-        <a href="#projects">Other Projects</a>
-        <a href="#intro">Back to Top</a>
+        <a href="#other-projects">Other Projects</a>
+        <a href="#intro">Back to Top<img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
+    </div>
+
+    <div class="side-nav-2">
+        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
     </div>
 
 
@@ -114,7 +118,7 @@
         </div>
 
 
-        <div class="sub-section project-section" id="logo" id="pad50" >
+        <div class="sub-section project-section pad50" id="logo" id="pad50" >
             <h6>
                 The Katsbrune Logo
             </h6>
@@ -128,7 +132,7 @@
         </div>
 
         
-        <div class="sub-section project-section" id="branding-assets"  id="pad50">
+        <div class="sub-section project-section pad50" id="branding-assets">
             <h6>
                 The Katsbrune Branding Assets
             </h6>
@@ -162,10 +166,10 @@
             </p>
         </div>
 
-        <div class="project-nav-buttons" id="margin50">
-            <a href="./llp.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+        <div class="project-nav-buttons" id="other-projects" id="margin50">
+            <a href="./pristine clean case study.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./ignite.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./arrow.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         
