--- a/llp.html
+++ b/llp.html
@@ -30,7 +30,7 @@
                     Labor Law Pro
                 </h1>
             </div>
-            <img src="./Website Images/LLP Application/LLP Hero Image.png" alt="LLP app dashborad">
+            <img class="round-img" src="./Website Images/LLP Application/Screen Mockups with Background/LLP Hero Desktop v2.jpg" alt="LLP app dashborad">
         </div>
     </div>
 
@@ -45,11 +45,15 @@
         <a href="#design-process">Design Process</a>
         <a href="#final-design">Final Designs</a>
         <a href="#future-steps">Future Steps</a>
-        <a href="#projects">Other Projects</a>
-        <a href="#intro">Back to Top</a>
+        <a href="#other-projects">Other Projects</a>
+        <a href="#intro">Back to Top<img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
     </div>
 
-    
+    <div class="side-nav-2">
+        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
+    </div>
+
+
     <main class="hidden">
 
         <div class="main-section project-section" id="overview">
@@ -490,7 +494,7 @@
             </div>
         </div>
 
-        <div class="project-nav-buttons" id="margin50">
+        <div class="project-nav-buttons" id="other-projects" id="margin50">
             <a href="./index.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./pristine clean case study.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
