--- a/ncba.html
+++ b/ncba.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alltech Promotional Flyers</title>
+    <title>NCBA Conference Designs </title>
     <link rel="stylesheet" href="styles.css">
     <script src="index.js" defer></script>
 
@@ -24,13 +24,13 @@
         <div class="project-hero" id="intro">
             <div class="ph-content">
                 <h2 class="h10">
-                    Print and Publication
+                    Promotional Materials
                 </h2>
                 <h1 class="h9">
-                    Alltech Flyers
+                    NCBA Conference
                 </h1>
             </div>
-            <img class="round-img" src="./Website Images/Alltech Flyers Downsized/Egalis Flyer Mockup.jpg" alt="Egalis Flyer Mockup">
+            <img class="round-img" src="./Website Images/NCBA 2024/NCBA Postcard Mockup_1.jpg" alt="Egalis Flyer Mockup">
         </div>
     </div>
 
@@ -49,39 +49,27 @@
                 </h2>
             </div>
             <h6>
-                Creating Promotional Flyers that Engage Consumers and Increase Sales
+                Designing Large and Small Scale Print Graphics to Engage Consumers and Convert Sales
             </h6>
             <p>
-                These flyers were created for Alltech and its subsidiary brands. Each flyer is meant to advertise a new product and its benefits while keeping consistent branding and directing the consumer to take further action.
+                NCBA is a convention, tradeshow, and premier event for the cattle industry where cattlemen and women from across the country gather for education, fellowship, networking, and business opportunities with industry-leading companies such as Alltech. This year, Alltech set up a booth with prominent, large-scale graphics, presentations, and other promotional material to entice potential consumers to stop by its booth. Below are some of the designs that I created for the event with the help of our marketing team.
             </p>
         </div>
 
 
         <div class="project-image round-img" id="final-designs">
-            <img src="./Website Images/Alltech Flyers Downsized/Crystalyx Winter Ad Flyer Mockup.jpg" alt="Crystalyx Flyer Mockup">
-            <img src="./Website Images/Alltech Flyers Downsized/YC3 Kirby Agri Flyer Mockup.jpg" alt="Kirby Agri Flyer mockup">
-            <div class="alltech-flyer-grid">
-                <img src="./Website Images/Alltech Flyers Downsized/Alltech Egalis Ad-V4-Website.jpg" alt="Egalis Flyer">
-                <img src="./Website Images/Alltech Flyers Downsized/Crystalyx Winter Ad Concept (1).jpg" alt="Crystalyx Flyer">
-                <img src="./Website Images/Alltech Flyers Downsized/YC3 Kirby Agri Flyer-18978.jpg" alt="Kirby Agri Flyer">
-            </div>
+            <img src="./Website Images/NCBA 2024/NCBA Tabletent Mockup 1.jpg" alt="Table Tent Mockup">
+            <img src="./Website Images/NCBA 2024/NCBA 2024 Booth Mockup_Back.jpg" alt="Booth Mockup Back">
+            <img src="./Website Images/NCBA 2024/NCBA 2024 Booth Mockup Front.jpg" alt="Booth Mockup Front">
+            <img src="./Website Images/NCBA 2024/NCBA Social Post Mockup 1.jpg" alt="Booth Mockup Front">
         </div>
 
 
 
-
-
-        
-
-
-
-
-
-
         <div class="project-nav-buttons" id="margin50">
-            <a href="./ignite.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
+            <a href="./flyers.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
-            <a href="./ncba.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
+            <a href="./finlandia.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
         </div>
 
         
