--- a/pristine clean case study.html
+++ b/pristine clean case study.html
@@ -30,7 +30,7 @@
                     Pristine Clean
                 </h1>
             </div>
-            <img src="./Website Images/Pristine Cline/Hero Dashboard Mockup.png" alt="Pristine Clean Website dashboard">
+            <img class="round-img" src="./Website Images/Pristine Cline/PC Hero Desktop v2.jpg" alt="Pristine Clean Website dashboard">
         </div>
     </div>
 
@@ -44,8 +44,12 @@
         <a href="#final-design">Final Designs</a>
         <a href="#future-steps">Future Steps</a>
         <a href="#reflection">Reflection</a>
-        <a href="#projects">Other Projects</a>
-        <a href="#intro">Back to Top</a>
+        <a href="#other-projects">Other Projects</a>
+        <a href="#intro">Back to Top<img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
+    </div>
+
+    <div class="side-nav-2">
+        <a href="#intro"><img src="./Website Images/Icons/Arrow Icon-light grey.svg"></a>
     </div>
 
 
@@ -575,7 +579,7 @@
             </div>
         </div>
 
-        <div class="project-nav-buttons" id="margin50">
+        <div class="project-nav-buttons" id="other-projects" id="margin50">
             <a href="./llp.html"><button class="btn-primary"><img src="./Website Images/Icons/Arrow Left.svg">Last Project</button></a>
             <a href="./index.html"><button class="btn-primary">Home</button></a>
             <a href="./katsbrune.html"><button class="btn-primary">Next Project<img src="./Website Images/Icons/Arrow Right.svg"></button></a>
